# omni

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: example_train.yaml  lm.yaml
configs/lm/: lm_full_sft.yaml  lm_full_sft_mini.yaml  lm_full_sft_moe.yaml  lm_pretrain.yaml  lm_pretrain_mini.yaml  lm_pretrain_moe.yaml
configs/model/: lm.yaml  lm_moe.yaml  vam.yaml  vam_moe.yaml  vlm.yaml  vlm_moe.yaml
configs/vam/: vam_a2a_all_mini.yaml  vam_a2a_audio_proj_mini.yaml  vam_sft_mini.yaml  vam_t2a_all_mini.yaml  vam_t2a_all_mini_omni-v.yaml
configs/vlm/: vlm_moe.yaml  vlm_pretrain.yaml  vlm_pretrain_moe.yaml  vlm_sft.yaml  vlm_sft_mini.yaml  vlm_sft_mini_resume.yaml  vlm_sft_moe.yaml
docs/: 01-architecture-overview.md  README.md  overview.md  tokenizer.md
docs/architecture/: README.md  overview.md
docs/core/: attention.md  block.md  index.md  mlp.md  norm.md  rope.md
docs/data/: README.md
docs/encoders/: index.md
docs/interview/: README.md  challenges.md  full_sft.md  index.md  inference.md  moe.md  multimodal.md  pretrain.md  training-systems.md  transformer-arch.md
docs/models/: index.md  (+3 more)
examples/: convert_model.py  eval_llm.py  eval_omni.py  eval_toolcall.py  eval_vlm.py  omni_web_demo.py  serve_openai_api.py
runs/: lm.sh  train_lm.sh  train_tokenizer.sh  train_vam.sh  train_vlm.sh  vam.sh  vlm.sh
scripts/: convert_model.py  convert_omni_o_to_hf.py  eval_llm.py  eval_toolcall.py  eval_vam.py  eval_vlm.py  omni_o_call.py  omni_o_terminal.py  omni_o_web.html  omni_web_demo.py  serve_openai_api.py
trainer/: lm.py  vam.py  vlm.py
(+132 files in other folders)
